--- a/style.css
+++ b/style.css
@@ -10,3 +10,23 @@ nav {
     padding: 10px 5%;
     box-shadow: 0 0 3px 1px black;
 }
+
+.left-nav{
+    font-weight: bold;
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+ 
+/* .right-nav{
+    
+} */
+.right-nav ul{
+    display: flex;
+    gap: 20px;
+    list-style: none;
+}
+.right-nav ul li {
+    border-bottom: 0.5px solid black;
+    font-size: 18px;
+    cursor: pointer;
+}
