--- a/style.css
+++ b/style.css
@@ -56,3 +56,13 @@ nav {
 .Right-home img {
     transform: scale(1.5);
 }
+
+.contact-page{
+    display: none;
+}
+form{
+    max-width: 550px;
+    border: 1px solid;
+    margin: 0 auto 50px;
+    border-radius: 10px;
+}
