--- a/style.css
+++ b/style.css
@@ -115,3 +115,11 @@ textarea {
     border-radius: 5px;
     font-size: 18px;
 }
+
+h1 {
+    color: #333;
+}
+
+ul {
+    list-style-type: square;
+}
