styling image and cat title

--- a/style.css
+++ b/style.css
@@ -123,3 +123,23 @@ h1 {
 ul {
     list-style-type: square;
 }
+
+img {
+    width: 200px;
+    height: auto;
+    padding: 10px;
+}
+
+/* .cats-section-page{
+    overflow: hidden;
+    min-height: 100vh;
+
+
+} */
+
+.Cat-title {
+    text-align: center;
+    font-size: 26px;
+    font-weight: bolder;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
