--- a/style.css
+++ b/style.css
@@ -143,3 +143,49 @@ img {
     font-weight: bolder;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+
+.card-container{
+    width: 60%;
+    height: 220px;
+    margin: 10px auto;
+    border-radius: 15px;
+    display: flex;
+    border: 1px solid black;
+}
+.cat-image-container{
+    width: 35%;
+    height: 100% ;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius:15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.cat-image-container img{
+    width: 100%;
+    height: 100%;
+
+}
+
+.cat-fact-container{
+    width:65% ;
+    height:100% ;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius:15px ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 10%;
+}
+
+.cat-fact-container span{
+    font-size: 18px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.container h3{
+    text-align: center;
+}
